cmake_minimum_required(VERSION 3.26)
project(BombedCore)

set(CMAKE_CXX_STANDARD 20)
if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -std=c++20")
endif()
add_executable(BombedCore src/main.cpp)
#find_package(GTest REQUIRED)

enable_testing()
add_executable(PlayerTests tests/Player.cpp)
add_test(PlayerTests PlayerTests)
add_executable(CharacterTests tests/Character.cpp)
add_test(CharacterTests CharacterTests)
add_executable(TimerTests tests/Timer.cpp)
add_test(TimerTests TimerTests)
#add_executable(MatrixTests tests/Matrix.cpp)
#add_test(MatrixTests MatrixTests)
#target_link_libraries(MatrixTests GTest::GTest GTest::Main pthread)
